<resources>
    <string name="app_name">FragmentTutorial4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone Number:</string>
    <string name="email">Email:</string>
    <string name="city">City:</string>
    <string name="name">Name:</string>
    <string name="go_back">Go Back</string>
    <string name="save">Save</string>
    <string name="emailET">Email</string>
    <string name="cityET">City</string>
    <string name="nameET">Name</string>
    <string name="phone_numberET">Phone Number</string>
</resources>